# tree-sitter-flatbuffers

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/c/: tree-sitter-flatbuffers.h  tree-sitter-flatbuffers.pc.in
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: array_test.txt  fbs_proto_test.txt  monsters_test.txt  reflection_test.txt
test/highlight/: monster_test.fbs
